package lld.splitwise;

public enum SplitType {
    EQUAL
    // EXACT, PERCENT can be added later
}
